--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link href="http://fonts.cdnfonts.com/css/clash-display" rel="stylesheet">
                 
    
-    <title>React App</title>
+    <title>ATG App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
